// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/List Group List 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  border: 1px solid #e7ebf2;
  border-radius: 0.25rem;
  width: undefinedpx;
}

.emotion-3 {
  min-height: 3.5rem;
  color: #212332;
  font-size: 1rem;
  background-color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0 1rem 0px 1rem;
  font-weight: initial;
}

.emotion-3[role='option'] {
  cursor: pointer;
}

.emotion-3>span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 3.5rem;
  padding: 0 1rem 0px 1rem;
  color: #54587f;
}

.emotion-3[data-focus-visible] {
  background-color: #f3f5f8;
}

.emotion-3[aria-selected='true'] {
  background-color: #e7eefe;
  color: #1451dc;
  font-weight: 500;
}

.emotion-3[aria-selected='true'][data-focus-visible] {
  background-color: #f3f5f8;
}

.emotion-3[aria-disabled] {
  color: var(--text-color-disabled);
}

.emotion-3 strong {
  font-weight: bold;
}

.emotion-3[role='option']:hover {
  background-color: #f3f5f8;
}

.emotion-4 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  cursor: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4>div {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5 {
  cursor: inherit;
}

.emotion-6 {
  color: #212332;
  font-size: 1rem;
  background-color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-weight: bold;
}

.emotion-6[role='option'] {
  cursor: pointer;
}

.emotion-6>span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 3.5rem;
  padding: 0 1rem 0px 1rem;
  color: #54587f;
}

.emotion-6[data-focus-visible] {
  background-color: #f3f5f8;
}

.emotion-6[aria-selected='true'] {
  background-color: #e7eefe;
  color: #1451dc;
  font-weight: 500;
}

.emotion-6[aria-selected='true'][data-focus-visible] {
  background-color: #f3f5f8;
}

.emotion-6[aria-disabled] {
  color: var(--text-color-disabled);
}

.emotion-6 strong {
  font-weight: bold;
}

.emotion-6[role='option']:hover {
  background-color: #f3f5f8;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        data-testid="ictinus_list"
      >
        <div
          style={
            Object {
              "height": "100%",
            }
          }
        >
          <ul
            aria-label="ictinus_list"
            id="listshowcase"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyDownCapture={[Function]}
            onMouseDown={[Function]}
            onScroll={[Function]}
            role="listbox"
            style={
              Object {
                "display": "flex",
                "flexDirection": "column",
                "height": "100%",
                "listStyle": "none",
                "overflowY": "auto",
                "padding": 0,
                "position": "relative",
              }
            }
            tabIndex={0}
          >
            <li
              aria-posinset={1}
              aria-selected={false}
              aria-setsize={11}
              className="emotion-3"
              data-key=""
              data-testid="ictinus_list_default_option"
              id="react-aria-generated-id-option-"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onDragStartCapture={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="option"
              tabIndex={-1}
            >
              <div
                className="emotion-4"
              >
                <div
                  className="emotion-5"
                >
                  All
                </div>
              </div>
            </li>
            <li
              className="emotion-6"
              role="presentation"
            >
              <span
                id="react-aria-generated-id"
                role="presentation"
              >
                Group 0
              </span>
              <ul
                aria-labelledby="react-aria-generated-id"
                role="group"
                style={
                  Object {
                    "listStyle": "none",
                    "padding": 0,
                  }
                }
              >
                <li
                  aria-selected={false}
                  aria-setsize={11}
                  className="emotion-3"
                  data-key="1"
                  data-testid="ictinus_list_item_1"
                  id="react-aria-generated-id-option-1"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onDragStartCapture={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  role="option"
                  tabIndex={-1}
                >
                  <div
                    className="emotion-4"
                  >
                    <div
                      className="emotion-5"
                    >
                      Option 1 of Group 0
                    </div>
                  </div>
                </li>
                <li
                  aria-selected={false}
                  aria-setsize={11}
                  className="emotion-3"
                  data-key="2"
                  data-testid="ictinus_list_item_2"
                  id="react-aria-generated-id-option-2"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onDragStartCapture={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  role="option"
                  tabIndex={-1}
                >
                  <div
                    className="emotion-4"
                  >
                    <div
                      className="emotion-5"
                    >
                      Option 2 of Group 0
                    </div>
                  </div>
                </li>
              </ul>
            </li>
            <li
              className="emotion-6"
              role="presentation"
            >
              <span
                id="react-aria-generated-id"
                role="presentation"
              >
                Group 1
              </span>
              <ul
                aria-labelledby="react-aria-generated-id"
                role="group"
                style={
                  Object {
                    "listStyle": "none",
                    "padding": 0,
                  }
                }
              >
                <li
                  aria-selected={false}
                  aria-setsize={11}
                  className="emotion-3"
                  data-key="3"
                  data-testid="ictinus_list_item_3"
                  id="react-aria-generated-id-option-3"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onDragStartCapture={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  role="option"
                  tabIndex={-1}
                >
                  <div
                    className="emotion-4"
                  >
                    <div
                      className="emotion-5"
                    >
                      Option 1 of Group 1
                    </div>
                  </div>
                </li>
                <li
                  aria-selected={false}
                  aria-setsize={11}
                  className="emotion-3"
                  data-key="4"
                  data-testid="ictinus_list_item_4"
                  id="react-aria-generated-id-option-4"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onDragStartCapture={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  role="option"
                  tabIndex={-1}
                >
                  <div
                    className="emotion-4"
                  >
                    <div
                      className="emotion-5"
                    >
                      Option 2 of Group 1
                    </div>
                  </div>
                </li>
              </ul>
            </li>
            <li
              className="emotion-6"
              role="presentation"
            >
              <span
                id="react-aria-generated-id"
                role="presentation"
              >
                Group 2
              </span>
              <ul
                aria-labelledby="react-aria-generated-id"
                role="group"
                style={
                  Object {
                    "listStyle": "none",
                    "padding": 0,
                  }
                }
              >
                <li
                  aria-posinset={2}
                  aria-selected={false}
                  aria-setsize={11}
                  className="emotion-3"
                  data-key="5"
                  data-testid="ictinus_list_item_5"
                  id="react-aria-generated-id-option-5"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onDragStartCapture={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  role="option"
                  tabIndex={-1}
                >
                  <div
                    className="emotion-4"
                  >
                    <div
                      className="emotion-5"
                    >
                      Option 1 of Group 2
                    </div>
                  </div>
                </li>
                <li
                  aria-posinset={3}
                  aria-selected={false}
                  aria-setsize={11}
                  className="emotion-3"
                  data-key="6"
                  data-testid="ictinus_list_item_6"
                  id="react-aria-generated-id-option-6"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onDragStartCapture={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  role="option"
                  tabIndex={-1}
                >
                  <div
                    className="emotion-4"
                  >
                    <div
                      className="emotion-5"
                    >
                      Option 2 of Group 2
                    </div>
                  </div>
                </li>
              </ul>
            </li>
            <li
              className="emotion-6"
              role="presentation"
            >
              <span
                id="react-aria-generated-id"
                role="presentation"
              >
                Group 3
              </span>
              <ul
                aria-labelledby="react-aria-generated-id"
                role="group"
                style={
                  Object {
                    "listStyle": "none",
                    "padding": 0,
                  }
                }
              >
                <li
                  aria-posinset={4}
                  aria-selected={false}
                  aria-setsize={11}
                  className="emotion-3"
                  data-key="7"
                  data-testid="ictinus_list_item_7"
                  id="react-aria-generated-id-option-7"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onDragStartCapture={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  role="option"
                  tabIndex={-1}
                >
                  <div
                    className="emotion-4"
                  >
                    <div
                      className="emotion-5"
                    >
                      Option 1 of Group 3
                    </div>
                  </div>
                </li>
                <li
                  aria-posinset={5}
                  aria-selected={false}
                  aria-setsize={11}
                  className="emotion-3"
                  data-key="8"
                  data-testid="ictinus_list_item_8"
                  id="react-aria-generated-id-option-8"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onDragStartCapture={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  role="option"
                  tabIndex={-1}
                >
                  <div
                    className="emotion-4"
                  >
                    <div
                      className="emotion-5"
                    >
                      Option 2 of Group 3
                    </div>
                  </div>
                </li>
              </ul>
            </li>
            <li
              className="emotion-6"
              role="presentation"
            >
              <span
                id="react-aria-generated-id"
                role="presentation"
              >
                Group 4
              </span>
              <ul
                aria-labelledby="react-aria-generated-id"
                role="group"
                style={
                  Object {
                    "listStyle": "none",
                    "padding": 0,
                  }
                }
              >
                <li
                  aria-posinset={6}
                  aria-selected={false}
                  aria-setsize={11}
                  className="emotion-3"
                  data-key="9"
                  data-testid="ictinus_list_item_9"
                  id="react-aria-generated-id-option-9"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onDragStartCapture={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  role="option"
                  tabIndex={-1}
                >
                  <div
                    className="emotion-4"
                  >
                    <div
                      className="emotion-5"
                    >
                      Option 1 of Group 4
                    </div>
                  </div>
                </li>
                <li
                  aria-posinset={7}
                  aria-selected={false}
                  aria-setsize={11}
                  className="emotion-3"
                  data-key="10"
                  data-testid="ictinus_list_item_10"
                  id="react-aria-generated-id-option-10"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onDragStartCapture={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  role="option"
                  tabIndex={-1}
                >
                  <div
                    className="emotion-4"
                  >
                    <div
                      className="emotion-5"
                    >
                      Option 2 of Group 4
                    </div>
                  </div>
                </li>
              </ul>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/List List 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  border: 1px solid #e7ebf2;
  border-radius: 0.25rem;
  width: undefinedpx;
}

.emotion-3 {
  min-height: 3.5rem;
  color: #212332;
  font-size: 1rem;
  background-color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0 1rem 0px 1rem;
  font-weight: initial;
}

.emotion-3[role='option'] {
  cursor: pointer;
}

.emotion-3>span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 3.5rem;
  padding: 0 1rem 0px 1rem;
  color: #54587f;
}

.emotion-3[data-focus-visible] {
  background-color: #f3f5f8;
}

.emotion-3[aria-selected='true'] {
  background-color: #e7eefe;
  color: #1451dc;
  font-weight: 500;
}

.emotion-3[aria-selected='true'][data-focus-visible] {
  background-color: #f3f5f8;
}

.emotion-3[aria-disabled] {
  color: var(--text-color-disabled);
}

.emotion-3 strong {
  font-weight: bold;
}

.emotion-3[role='option']:hover {
  background-color: #f3f5f8;
}

.emotion-4 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  cursor: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4>div {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5 {
  cursor: inherit;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        data-testid="ictinus_list"
      >
        <div
          style={
            Object {
              "height": "100%",
            }
          }
        >
          <ul
            aria-label="ictinus_list"
            id="listshowcase"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyDownCapture={[Function]}
            onMouseDown={[Function]}
            onScroll={[Function]}
            role="listbox"
            style={
              Object {
                "display": "flex",
                "flexDirection": "column",
                "height": "100%",
                "listStyle": "none",
                "overflowY": "auto",
                "padding": 0,
                "position": "relative",
              }
            }
            tabIndex={0}
          >
            <li
              aria-posinset={1}
              aria-selected={false}
              aria-setsize={6}
              className="emotion-3"
              data-key=""
              data-testid="ictinus_list_default_option"
              id="react-aria-generated-id-option-"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onDragStartCapture={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="option"
              tabIndex={-1}
            >
              <div
                className="emotion-4"
              >
                <div
                  className="emotion-5"
                >
                  All
                </div>
              </div>
            </li>
            <li
              aria-posinset={2}
              aria-selected={false}
              aria-setsize={6}
              className="emotion-3"
              data-key="0"
              data-testid="ictinus_list_item_0"
              id="react-aria-generated-id-option-0"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onDragStartCapture={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="option"
              tabIndex={-1}
            >
              <div
                className="emotion-4"
              >
                <div
                  className="emotion-5"
                >
                  Item 0
                </div>
              </div>
            </li>
            <li
              aria-posinset={3}
              aria-selected={false}
              aria-setsize={6}
              className="emotion-3"
              data-key="1"
              data-testid="ictinus_list_item_1"
              id="react-aria-generated-id-option-1"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onDragStartCapture={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="option"
              tabIndex={-1}
            >
              <div
                className="emotion-4"
              >
                <div
                  className="emotion-5"
                >
                  Item 1
                </div>
              </div>
            </li>
            <li
              aria-posinset={4}
              aria-selected={false}
              aria-setsize={6}
              className="emotion-3"
              data-key="2"
              data-testid="ictinus_list_item_2"
              id="react-aria-generated-id-option-2"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onDragStartCapture={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="option"
              tabIndex={-1}
            >
              <div
                className="emotion-4"
              >
                <div
                  className="emotion-5"
                >
                  Item 2
                </div>
              </div>
            </li>
            <li
              aria-posinset={5}
              aria-selected={false}
              aria-setsize={6}
              className="emotion-3"
              data-key="3"
              data-testid="ictinus_list_item_3"
              id="react-aria-generated-id-option-3"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onDragStartCapture={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="option"
              tabIndex={-1}
            >
              <div
                className="emotion-4"
              >
                <div
                  className="emotion-5"
                >
                  Item 3
                </div>
              </div>
            </li>
            <li
              aria-posinset={6}
              aria-selected={false}
              aria-setsize={6}
              className="emotion-3"
              data-key="4"
              data-testid="ictinus_list_item_4"
              id="react-aria-generated-id-option-4"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onDragStartCapture={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="option"
              tabIndex={-1}
            >
              <div
                className="emotion-4"
              >
                <div
                  className="emotion-5"
                >
                  Item 4
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/List List with icons 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  border: 1px solid #e7ebf2;
  border-radius: 0.25rem;
  width: undefinedpx;
}

.emotion-3 {
  min-height: 3.5rem;
  color: #212332;
  font-size: 1rem;
  background-color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0 1rem 0px 1rem;
  font-weight: initial;
}

.emotion-3[role='option'] {
  cursor: pointer;
}

.emotion-3>span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 3.5rem;
  padding: 0 1rem 0px 1rem;
  color: #54587f;
}

.emotion-3[data-focus-visible] {
  background-color: #f3f5f8;
}

.emotion-3[aria-selected='true'] {
  background-color: #e7eefe;
  color: #1451dc;
  font-weight: 500;
}

.emotion-3[aria-selected='true'][data-focus-visible] {
  background-color: #f3f5f8;
}

.emotion-3[aria-disabled] {
  color: var(--text-color-disabled);
}

.emotion-3 strong {
  font-weight: bold;
}

.emotion-3[role='option']:hover {
  background-color: #f3f5f8;
}

.emotion-4 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  cursor: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4>div {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5 {
  cursor: inherit;
}

.emotion-9 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  fill: #5f6c85;
  width: 1rem;
  height: 1rem;
}

.emotion-10 path {
  fill: #5f6c85;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        data-testid="ictinus_list"
      >
        <div
          style={
            Object {
              "height": "100%",
            }
          }
        >
          <ul
            aria-label="ictinus_list"
            id="react-aria-generated-id"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyDownCapture={[Function]}
            onMouseDown={[Function]}
            onScroll={[Function]}
            role="listbox"
            style={
              Object {
                "display": "flex",
                "flexDirection": "column",
                "height": "100%",
                "listStyle": "none",
                "overflowY": "auto",
                "padding": 0,
                "position": "relative",
              }
            }
            tabIndex={0}
          >
            <li
              aria-posinset={1}
              aria-selected={false}
              aria-setsize={6}
              className="emotion-3"
              data-key=""
              data-testid="ictinus_list_default_option"
              id="react-aria-generated-id-option-"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onDragStartCapture={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="option"
              tabIndex={-1}
            >
              <div
                className="emotion-4"
              >
                <div
                  className="emotion-5"
                >
                  All
                </div>
              </div>
            </li>
            <li
              aria-posinset={2}
              aria-selected={false}
              aria-setsize={6}
              className="emotion-3"
              data-key="Option 1"
              data-testid="ictinus_list_item_Option_1"
              id="react-aria-generated-id-option-Option1"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onDragStartCapture={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="option"
              tabIndex={-1}
            >
              <div
                className="emotion-4"
              >
                <div
                  className="emotion-5"
                >
                  Option 1
                </div>
                <span
                  className="emotion-9"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-10"
                  />
                </span>
              </div>
            </li>
            <li
              aria-posinset={3}
              aria-selected={false}
              aria-setsize={6}
              className="emotion-3"
              data-key="Option 2"
              data-testid="ictinus_list_item_Option_2"
              id="react-aria-generated-id-option-Option2"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onDragStartCapture={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="option"
              tabIndex={-1}
            >
              <div
                className="emotion-4"
              >
                <div
                  className="emotion-5"
                >
                  Option 2
                </div>
                <span
                  className="emotion-9"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-10"
                  />
                </span>
              </div>
            </li>
            <li
              aria-posinset={4}
              aria-selected={false}
              aria-setsize={6}
              className="emotion-3"
              data-key="Option 3"
              data-testid="ictinus_list_item_Option_3"
              id="react-aria-generated-id-option-Option3"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onDragStartCapture={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="option"
              tabIndex={-1}
            >
              <div
                className="emotion-4"
              >
                <div
                  className="emotion-5"
                >
                  Option 3
                </div>
                <span
                  className="emotion-9"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-10"
                  />
                </span>
              </div>
            </li>
            <li
              aria-posinset={5}
              aria-selected={false}
              aria-setsize={6}
              className="emotion-3"
              data-key="Option 4"
              data-testid="ictinus_list_item_Option_4"
              id="react-aria-generated-id-option-Option4"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onDragStartCapture={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="option"
              tabIndex={-1}
            >
              <div
                className="emotion-4"
              >
                <div
                  className="emotion-5"
                >
                  Option 4
                </div>
                <span
                  className="emotion-9"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-10"
                  />
                </span>
              </div>
            </li>
            <li
              aria-posinset={6}
              aria-selected={false}
              aria-setsize={6}
              className="emotion-3"
              data-key="Option 5"
              data-testid="ictinus_list_item_Option_5"
              id="react-aria-generated-id-option-Option5"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onDragStartCapture={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="option"
              tabIndex={-1}
            >
              <div
                className="emotion-4"
              >
                <div
                  className="emotion-5"
                >
                  Option 5
                </div>
                <span
                  className="emotion-9"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-10"
                  />
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/List Virtualized List 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  border: 1px solid #e7ebf2;
  border-radius: 0.25rem;
  width: 650px;
}

.emotion-3 {
  min-height: 3.5rem;
  color: #212332;
  font-size: 1rem;
  background-color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0 1rem 0px 1rem;
  font-weight: initial;
}

.emotion-3[role='option'] {
  cursor: pointer;
}

.emotion-3>span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 3.5rem;
  padding: 0 1rem 0px 1rem;
  color: #54587f;
}

.emotion-3[data-focus-visible] {
  background-color: #f3f5f8;
}

.emotion-3[aria-selected='true'] {
  background-color: #e7eefe;
  color: #1451dc;
  font-weight: 500;
}

.emotion-3[aria-selected='true'][data-focus-visible] {
  background-color: #f3f5f8;
}

.emotion-3[aria-disabled] {
  color: var(--text-color-disabled);
}

.emotion-3 strong {
  font-weight: bold;
}

.emotion-3[role='option']:hover {
  background-color: #f3f5f8;
}

.emotion-4 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  cursor: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4>div {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5 {
  cursor: inherit;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        data-testid="ictinus_list"
      >
        <div
          style={
            Object {
              "height": 650,
            }
          }
        >
          <ul
            aria-label="ictinus_list"
            id="listshowcase"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyDownCapture={[Function]}
            onMouseDown={[Function]}
            onScroll={[Function]}
            role="listbox"
            style={
              Object {
                "display": "flex",
                "flexDirection": "column",
                "height": "100%",
                "listStyle": "none",
                "overflowY": "auto",
                "padding": 0,
                "position": "relative",
              }
            }
            tabIndex={0}
          >
            <li
              aria-posinset={1}
              aria-selected={false}
              aria-setsize={1001}
              className="emotion-3"
              data-key=""
              data-testid="ictinus_list_default_option"
              id="react-aria-generated-id-option-"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onDragStartCapture={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="option"
              style={
                Object {
                  "height": 46,
                  "left": 0,
                  "lineHeight": "46px",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
              tabIndex={-1}
            >
              <div
                className="emotion-4"
              >
                <div
                  className="emotion-5"
                >
                  All
                </div>
              </div>
            </li>
            <li
              aria-posinset={2}
              aria-selected={false}
              aria-setsize={1001}
              className="emotion-3"
              data-key="0"
              data-testid="ictinus_list_item_0"
              id="react-aria-generated-id-option-0"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onDragStartCapture={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="option"
              style={
                Object {
                  "height": 46,
                  "left": 0,
                  "lineHeight": "46px",
                  "position": "absolute",
                  "right": 0,
                  "top": 46,
                }
              }
              tabIndex={-1}
            >
              <div
                className="emotion-4"
              >
                <div
                  className="emotion-5"
                >
                  Item 0
                </div>
              </div>
            </li>
            <li
              aria-posinset={3}
              aria-selected={false}
              aria-setsize={1001}
              className="emotion-3"
              data-key="1"
              data-testid="ictinus_list_item_1"
              id="react-aria-generated-id-option-1"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onDragStartCapture={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="option"
              style={
                Object {
                  "height": 46,
                  "left": 0,
                  "lineHeight": "46px",
                  "position": "absolute",
                  "right": 0,
                  "top": 92,
                }
              }
              tabIndex={-1}
            >
              <div
                className="emotion-4"
              >
                <div
                  className="emotion-5"
                >
                  Item 1
                </div>
              </div>
            </li>
            <li
              aria-posinset={4}
              aria-selected={false}
              aria-setsize={1001}
              className="emotion-3"
              data-key="2"
              data-testid="ictinus_list_item_2"
              id="react-aria-generated-id-option-2"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onDragStartCapture={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="option"
              style={
                Object {
                  "height": 46,
                  "left": 0,
                  "lineHeight": "46px",
                  "position": "absolute",
                  "right": 0,
                  "top": 138,
                }
              }
              tabIndex={-1}
            >
              <div
                className="emotion-4"
              >
                <div
                  className="emotion-5"
                >
                  Item 2
                </div>
              </div>
            </li>
            <li
              aria-posinset={5}
              aria-selected={false}
              aria-setsize={1001}
              className="emotion-3"
              data-key="3"
              data-testid="ictinus_list_item_3"
              id="react-aria-generated-id-option-3"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onDragStartCapture={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="option"
              style={
                Object {
                  "height": 46,
                  "left": 0,
                  "lineHeight": "46px",
                  "position": "absolute",
                  "right": 0,
                  "top": 184,
                }
              }
              tabIndex={-1}
            >
              <div
                className="emotion-4"
              >
                <div
                  className="emotion-5"
                >
                  Item 3
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
